# llm-routing

./: .gitignore  EXPERIMENT_REPORT.md  README.md  article.html  article_1_medium.html  article_1_the_cliff.md  article_2_medium.html  article_2_too_slow.md  article_3_medium.html  article_3_the_if_statement.md  pyproject.toml  routing_benchmark_spec.md
results/run_local_standin/: kpi_summary.json  runs.csv  turns.jsonl
results/run_local_standin_attempt1_60s_timeout/: kpi_summary.json  runs.csv  turns.jsonl
results/run_overnight/: runs.csv  turns.jsonl
routing_benchmark/: dataset.py  driver.py  embedding.py  environment.py  metrics.py  models.py  persistence.py  provider.py  router.py  tooling.py
routing_benchmark/providers/: anthropic_cloud.py  ollama.py
routing_benchmark/routers/: commercial_cloud.py  context_aware.py  static_semantic.py
scripts/: analyze_results.py  article_analysis.py  article_plots.py  generate_plots.py  run_benchmark.py
tests/: conftest.py  test_agent_state_synthetic_history.py  test_anthropic_cloud_provider.py  test_commercial_cloud_router.py  test_context_aware_router.py  test_dataset.py  test_deterministic_mock_tooling.py  test_driver.py  test_embedding.py  test_environment.py  test_metrics.py  test_models.py  test_ollama_provider.py  test_persistence.py  test_provider.py  test_router.py  test_shadow_metrics.py  test_static_semantic_router.py  test_tooling.py
